[package]
name = "selenium-manager"
version = "0.4.17-nightly" # don't forget to update rust/BUILD.bazel
edition = "2021"
authors = ["Selenium <selenium-developers@googlegroups.com"]
license = "Apache-2.0"
homepage = "https://www.selenium.dev/"
repository = "https://github.com/SeleniumHQ/selenium"
documentation = "https://www.selenium.dev/documentation/"
description = """
Selenium Manager is a CLI tool that automatically manages the browser/driver infrastructure required by Selenium.
"""

[dependencies]
clap = { version = "4.4.12", features = ["derive", "cargo"] }
log = "0.4.20"
env_logger = "0.10.1"
regex = "1.10.2"
tokio = { version = "1.35.1", default-features = false, features = ["macros", "net", "rt-multi-thread"] }
tempfile = "3.9.0"
reqwest = { version = "0.11.23", default-features = false, features = [ "rustls-tls" ] }
zip = "0.6.6"
directories = "5.0.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
flate2 = "1.0.28"
tar = "0.4.40"
infer = "0.15.0"
exitcode = "1.1.2"
is_executable = "1.0.1"
toml = "0.8.8"
bzip2 = "0.4.4"
sevenz-rust = "0.5.4"
walkdir = "2.4.0"
debpkg = "0.6.0"
anyhow = { version = "1.0.77", features = ["backtrace"] }

[dev-dependencies]
assert_cmd = "2.0.12"
rstest = "0.18.2"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary

[profile.dev]
debug = true             # Full debug info
split-debuginfo = 'off'  # Debug info in the final artifact
